Bug 1684086: Prevent project menu overflow
And unify line heigt

--- a/frontend/src/core/project/components/ProjectItem.css
+++ b/frontend/src/core/project/components/ProjectItem.css
@@ -8,3 +8,11 @@
     background: #3f4752;
     color: #fff;
 }
+
+.project-menu .menu li a .project {
+    display: inline-block;
+    max-width: 550px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
